extend unit tests extend admission controller such that it scans cronjobs, jobs, statefulsets, daemonsets
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/controllers/admission/webhook-manifests.yaml
+++ b/controllers/admission/webhook-manifests.yaml
@@ -17,6 +17,7 @@ webhooks:
   - apiGroups:
     - ""
     - apps
+    - batch
     apiVersions:
     - v1
     operations:
@@ -25,4 +26,8 @@ webhooks:
     resources:
     - pods
     - deployments
+    - daemonsets
+    - statefulsets
+    - jobs
+    - cronjobs
   sideEffects: None
