enable gofumpt in golangci-lint
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,4 +23,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.45
-          args: --timeout=5m0s
+          args: --timeout=5m0s --enable gofumpt
