make sure manifests are re-generated for webhook
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,4 +1,3 @@
-
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
@@ -19,6 +18,7 @@ webhooks:
   - apiGroups:
     - ""
     - apps
+    - batch
     apiVersions:
     - v1
     operations:
@@ -27,4 +27,8 @@ webhooks:
     resources:
     - pods
     - deployments
+    - daemonsets
+    - statefulsets
+    - jobs
+    - cronjobs
   sideEffects: None
