--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -59,7 +59,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # fetch is nneded for "git tag --list"
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
       - name: Start minikube
@@ -86,18 +86,8 @@ jobs:
 
       - name: Setting PREVIOUS_RELEASE env var
         run: |
-          echo "*******************"
-          git tag --list
-          echo "*******************"
-          git tag --list 'v*'
-          echo "*******************"
-          git for-each-ref --sort=-refname --format '%(refname:strip=2)' refs/tags --count=1
-          echo "*******************"
           echo "PREVIOUS_RELEASE=$(git tag --list 'v*' | tail -1)" >> $GITHUB_ENV
 
-      - name: Debug PREVIOUS_RELEASE
-        run: echo ${{ env.PREVIOUS_RELEASE }}
-      
       - name: Run integration tests
         run: |
           PREVIOUS_RELEASE=${{ env.PREVIOUS_RELEASE }} \
