--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -279,7 +279,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0 # fetch is nneded for "git tag --list"
+          fetch-depth: 0 # fetch is nneded for "git tag --list" in the Makefile
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
       - name: extract tag/version
@@ -333,16 +333,8 @@ jobs:
       - name: Store creds
         run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
-      - name: Setting PREVIOUS_RELEASE env var
-        run: |
-          echo "PREVIOUS_RELEASE=$(git tag --list 'v*' | tail -1)" >> $GITHUB_ENV
-
       - name: Run integration tests
-        run: |
-          EXTERNAL_INSTALLATION=1 \
-          PREVIOUS_RELEASE=${{ env.PREVIOUS_RELEASE }} \
-          VERSION=${{ steps.get_version.outputs.VERSION }} \
-          make test/integration/ci
+        run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.get_version.outputs.VERSION }} make test/integration/ci
 
       - name: Clean up
         run: |
@@ -419,18 +411,10 @@ jobs:
       # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
       # before the test execution starts.
       - name: Wait a bit for the runner to become more stable
-        run: sleep 60
-
-      - name: Setting PREVIOUS_RELEASE env var
-        run: |
-          echo "PREVIOUS_RELEASE=$(git tag --list 'v*' | tail -1)" >> $GITHUB_ENV
+        run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
 
       - name: Run integration tests
-        run: |
-          EXTERNAL_INSTALLATION=1 \
-          PREVIOUS_RELEASE=${{ env.PREVIOUS_RELEASE }} \
-          VERSION=${{ steps.get_version.outputs.VERSION }} \
-          make test/integration/ci
+        run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.get_version.outputs.VERSION }} make test/integration/ci
 
       - name: Upload test logs artifact
         uses: actions/upload-artifact@v3
