⭐ Set Admission Webhook `failurePolicy` depending ... (#408)
* Set Admission Webhook `failurePolicy` depending ...

... on the mode of the webhook.
This also implies changing the responses depending on the mode.

* Add unit tests

* Add integration tests for permissive/enforcing

* Add docs on configuring admission mode

Fixes #328

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -70,6 +70,14 @@ spec:
                     - permissive
                     - enforcing
                     type: string
+                  replicas:
+                    default: 1
+                    description: Number of replicas for the admission webhook. For
+                      enforcing mode, the minimum should be two to prevent problems
+                      during Pod failures, e.g. node failure, node scaling, etc.
+                    format: int32
+                    minimum: 1
+                    type: integer
                 type: object
               consoleIntegration:
                 properties:
@@ -151,6 +159,14 @@ spec:
                       tag:
                         type: string
                     type: object
+                  replicas:
+                    default: 1
+                    description: Number of replicas for the scanner. For enforcing
+                      mode, the minimum should be two to prevent problems during Pod
+                      failures, e.g. node failure, node scaling, etc.
+                    format: int32
+                    minimum: 1
+                    type: integer
                   resources:
                     description: ResourceRequirements describes the compute resource
                       requirements.
