Fix RBAC permissions and path to config.json
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/rbac/k8s_resources_scanning_clusterrole.yaml
+++ b/config/rbac/k8s_resources_scanning_clusterrole.yaml
@@ -11,3 +11,11 @@ rules:
   - get
   - watch
   - list
+- apiGroups:
+  - ""
+  resourceNames:
+  - mondoo-private-registries-secrets
+  resources:
+  - secrets
+  verbs:
+  - get
