--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -3,9 +3,8 @@ kind: CustomResourceDefinition
 metadata:
   name: mondooauditconfigs.k8s.mondoo.com
   annotations:
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "mondoo-operator.fullname" . }}-
+    controller-gen.kubebuilder.io/version: v0.9.0
   labels:
-
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 spec:
   conversion:
@@ -81,6 +80,14 @@ spec:
                     - permissive
                     - enforcing
                     type: string
+                  replicas:
+                    default: 1
+                    description: Number of replicas for the admission webhook. For enforcing
+                      mode, the minimum should be two to prevent problems during Pod
+                      failures, e.g. node failure, node scaling, etc.
+                    format: int32
+                    minimum: 1
+                    type: integer
                 type: object
               consoleIntegration:
                 properties:
@@ -162,6 +169,14 @@ spec:
                       tag:
                         type: string
                     type: object
+                  replicas:
+                    default: 1
+                    description: Number of replicas for the scanner. For enforcing mode,
+                      the minimum should be two to prevent problems during Pod failures,
+                      e.g. node failure, node scaling, etc.
+                    format: int32
+                    minimum: 1
+                    type: integer
                   resources:
                     description: ResourceRequirements describes the compute resource
                       requirements.
