Replace awk with gawk
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -334,7 +334,7 @@ jobs:
         run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
       - name: Install awk (needed in Makefile)
-        run: sudo apt-get install -y awk
+        run: sudo apt-get install -y gawk
 
       - name: Run integration tests
         run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.get_version.outputs.VERSION }} make test/integration/ci
@@ -417,7 +417,7 @@ jobs:
         run: kubectl -n kube-system wait --for=condition=Ready pods --all --timeout=60s
 
       - name: Install awk (needed in Makefile)
-        run: sudo apt-get install -y awk
+        run: sudo apt-get install -y gawk
 
       - name: Run integration tests
         run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.get_version.outputs.VERSION }} make test/integration/ci
