--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -94,6 +94,16 @@ spec:
                     type: boolean
                   enable:
                     type: boolean
+                  privateRegistriesPullSecretRef:
+                    description: PrivateRegistryScanning defines the name of a secret
+                      that contains the credentials for the private registries we
+                      have to pull images from.
+                    properties:
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                        type: string
+                    type: object
                 type: object
               mondooCredsSecretRef:
                 description: Config is an example field of MondooAuditConfig. Edit
