⭐ Add private registries pull secret (#441)
* WIP: ⭐ Add private registries pull secret

This secret has to include all the pull secret needed for any private registry
used in the cluster.

The Mondoo Scan API will read the file to also pull and scan images located in
private registries.

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -87,6 +87,7 @@ rules:
   - ""
   resourceNames:
   - mondoo-client
+  - mondoo-private-registries-secrets
   - mondoo-token
   resources:
   - secrets
