--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -169,6 +169,16 @@ spec:
                       tag:
                         type: string
                     type: object
+                  privateRegistriesPullSecretRef:
+                    description: PrivateRegistryScanning defines the name of a secret
+                      that contains the credentials for the private registries we have
+                      to pull images from.
+                    properties:
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                        type: string
+                    type: object
                   replicas:
                     default: 1
                     description: Number of replicas for the scanner. For enforcing mode,
