--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    app: mondoo-operator
+    app.kubernetes.io/name: mondoo-operator
   name: system
 ---
 apiVersion: apps/v1
@@ -11,16 +11,16 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
-    app: mondoo-operator
+    app.kubernetes.io/name: mondoo-operator
 spec:
   selector:
     matchLabels:
-      app: mondoo-operator
+      app.kubernetes.io/name: mondoo-operator
   replicas: 1
   template:
     metadata:
       labels:
-        app: mondoo-operator
+        app.kubernetes.io/name: mondoo-operator
       annotations:
         kubectl.kubernetes.io/default-container: manager
     spec:
