added extra labels that do not overlap with Helm internals
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -11,6 +11,7 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
+    app: mondoo-operator
     app.kubernetes.io/name: mondoo-operator
 spec:
   selector:
