--- a/config/manager/metrics-service.yaml
+++ b/config/manager/metrics-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
+    app: mondoo-operator
     app.kubernetes.io/name: mondoo-operator
   name: controller-manager-metrics-service
   namespace: mondoo-operator
