--- a/config/manager/metrics-service.yaml
+++ b/config/manager/metrics-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    control-plane: controller-manager
+    app.kubernetes.io/name: mondoo-operator
   name: controller-manager-metrics-service
   namespace: mondoo-operator
 spec:
@@ -13,4 +13,4 @@ spec:
     protocol: TCP
     targetPort: metrics
   selector:
-    control-plane: controller-manager
+    app.kubernetes.io/name: mondoo-operator
