request only errors from scan API when running a kubernetes resources scan
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -7,11 +7,12 @@ spec:
   mondooCredsSecretRef:
     name: mondoo-client
   kubernetesResources:
-    enable: false
+    enable: true
+    containerImageScanning: true
   nodes:
-    enable: true
+    enable: false
   admission:
-    enable: true
+    enable: false
     certificateProvisioning:
       # Could be "cert-manager", "openshift" or "manual"
       mode: cert-manager
