pass secrets to the re-usable workflow for integration tests
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/edge-integration-tests.yaml
+++ b/.github/workflows/edge-integration-tests.yaml
@@ -19,4 +19,5 @@ jobs:
 
       - uses: ./.github/workflows/integration-tests.yaml
         with:
-          mondooClientImageTag: ${{ github.event.inputs.mondooClientImageTag }} 
+          mondooClientImageTag: ${{ github.event.inputs.mondooClientImageTag }}
+          secrets: inherit
