--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -35,6 +35,10 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
 
+      # Makes it easier to see what was the input for this workflow in case we need to debug.
+      - name: Print workflow inputs
+        run: echo "${{ toJSON(github.event.inputs) }}"
+
       - name: Store creds
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
