--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -44,6 +44,7 @@ jobs:
         if: matrix.k8s-distro == 'k3s'
         with:
           version: ${{ matrix.k8s-version }}
+          k3d-args: --k3s-arg=--disable=traefik@server:*
 
       - uses: actions/setup-go@v2
         with:
