--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -44,6 +44,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
+
       - uses: actions/setup-go@v2
         with:
           go-version: "${{ env.golang-version }}"
@@ -365,6 +368,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Import environment variables from file
+        run: cat ".github/env" >> $GITHUB_ENV
 
       - name: extract tag/version
         id: get_version
