🧹 Add EKS terraform templates (#496)
* 🧹 Add EKS terraform templates

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ integration-tests.xml
 tests/integration/_output
 
 .vscode/*.log
+
+.github/terraform/**/.terraform*
+.github/terraform/**/terraform.tfstate*
+.github/terraform/aws/eks-config
