enable workload discovery by default
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -32,6 +32,9 @@ spec:
         args:
         - operator
         - --leader-elect
+        env:
+        - name: FEATURE_DISCOVER_WORKLOADS
+          value: "1"
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
