ignore controller-runtime
since our dependency on it is driven by our OperatorSDK usage.
Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,6 @@ updates:
     directory: /
     schedule:
       interval: daily
+    ignore:
+      # This dependency is inherited from our usage of OperatorSDK
+      - dependency-name: sigs.k8s.io/controller-runtime
