extra dependabot ignores
As seen from some of the releases of OperatorSDK, there are some
packages whose version's we follow based on OperatorSDK
instructions/guidance.

https://sdk.operatorframework.io/docs/upgrading-sdk-version/v1.17.0/

Mark ginkgo, gomega, k8s.io/apimachiner and k8s.io/client-go as packages
to ignore.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,5 +5,10 @@ updates:
     schedule:
       interval: daily
     ignore:
-      # This dependency is inherited from our usage of OperatorSDK
+      # These dependencies are inherited from our usage of OperatorSDK
+      # and they get updated as we follow OperatorSDK's releases
       - dependency-name: sigs.k8s.io/controller-runtime
+      - dependency-name: k8s.io/apimachinery
+      - dependency-name: k8s.io/client-go
+      - dependency-name: github.com/onsi/ginkgo/v2
+      - dependency-name: github.com/onsi/gomega
