--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -19,6 +19,7 @@ jobs:
     name: Integration tests
     
     strategy:
+      fail-fast: false
       matrix:
         k8s-version: [v1.22.13, v1.23.10, v1.24.4]
         k8s-distro: [minikube, k3d]
