--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -262,6 +262,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         k8s-version: [v1.22.13, v1.23.10, v1.24.4]
 
@@ -360,6 +361,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         k8s-version: [v1.22.13, v1.23.10, v1.24.4]
 
