Ignore company names in spellcheck
Signed-off-by: Tim Smith <tsmith84@gmail.com>

--- a/.github/workflows/spell-check.yaml
+++ b/.github/workflows/spell-check.yaml
@@ -34,6 +34,7 @@ jobs:
             cspell:aws/aws.txt
             cspell:filetypes/filetypes.txt
             cspell:software-terms/softwareTerms.txt
+            cspell:companies/companies.txt
 
   comment:
     name: Report
