try out KUBECONFIG
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/release-tests.yaml
+++ b/.github/workflows/release-tests.yaml
@@ -93,7 +93,7 @@ jobs:
       - name: Run integration tests
         run: VERSION=${{ env.MONDOO_OPERATOR_IMAGE_TAG }} K8S_DISTRO=aks make test/integration/ci
         env:
-          KUBECONFIG: ${{ env.GITHUB_WORKSPACE }}/.github/terraform/aks/kubeconfig
+          KUBECONFIG: ${{ format('{0}/{1}', github.workspace, '.github/terraform/aks/kubeconfig') }}
 
       - name: Clean up AKS terraform
         run: terraform destroy -auto-approve
